fixed alignments for categories

--- a/styles/style.css
+++ b/styles/style.css
@@ -106,28 +106,31 @@ p {
     margin: 70px 0;
 }
 
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; 
+    align-items: stretch; 
+}
+
 .col-3 {
     flex-basis: 25%;
     padding: 20px;
-    min-width: 350px; 
+    min-width: 350px;
     margin-bottom: 30px;
-}
-
-.small-container {
-    max-width: 1080px;
-    margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
 }
 
 .categories .col-3 {
-    display: inline-block;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease, border 0.3s ease;
 }
 
 .categories .col-3 img {
     width: 100%;
+    object-fit: cover; 
     border-radius: 10px;
     border: 2px solid #f0f0f0;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
@@ -148,23 +151,22 @@ p {
     color: #333;
     text-decoration: none;
     transition: color 0.3s ease;
+    text-align: center;
 }
 
 .category-link:hover {
     color: #ff7675;
     text-decoration: underline;
 }
+
 @media only screen and (max-width:800px) {
     .col-3 {
         flex-basis: 50%;
         padding: 20px;
-        min-width: 100px; 
+        min-width: 100px;
         margin-bottom: 30px;
     }
-
-
 }
-
 /* ----------------------------------------------------------------- */
 
 
